--- a/src/style/style.scss
+++ b/src/style/style.scss
@@ -19,17 +19,64 @@ body{
         margin: 20px 0 0;
     }
 
-    .figure-container{
-        fill:transparent;
-        stroke:white;
-        stroke-width: 4px;
-        stroke-linecap: round;
+    .game-container{
 
+        padding: 20px 30px;
+        position: relative;
+        margin: auto;
+        height: 350px;
+        width: 450px;
 
-        .figure-part{
-            display: none;
+        .figure-container{
+            fill:transparent;
+            stroke:white;
+            stroke-width: 4px;
+            stroke-linecap: round;
+    
+    
+            .figure-part{
+                display: none;
+            }
+        }
+
+        .wrong-letter-container{
+            position: absolute;
+            top: 20px;
+            right:20px;
+            display: flex;
+            flex-direction: column;
+             text-align: right;
+
+             p{
+                 margin: 0 0 5px;
+             }
+
+             span{
+                 font-size: 24px;
+             }
+            
+        }
+
+        .word{
+            display: flex;
+            position: absolute;
+            bottom: 10px;
+            left: 50px;
+            transform: translateX(-50%);
+
+            .letter{
+                 border-bottom: 3px solid rgb(98, 147, 238);
+                 display: inline-flex;
+                 font-size: 30px;
+                 align-items: center;
+                 justify-content: center;
+                 margin: 0 3px;
+                 height: 50px;
+                 width: 20px;
+            }
         }
     }
+    
     
 }
 
